Register view - UI only - Added Vee-Validate

--- a/src/resources/sass/_app.scss
+++ b/src/resources/sass/_app.scss
@@ -1,1 +1,13 @@
 @import "~bootstrap/scss/bootstrap";
+
+.has-errors {
+    border-color: $red;
+
+    &:hover, &:active, &:focus {
+        border-color: $red;
+    }
+}
+
+.red-text {
+    color: $red;
+}
