--- a/src/resources/sass/_variables.scss
+++ b/src/resources/sass/_variables.scss
@@ -3,9 +3,11 @@ $black: #000000;
 $green: #05CE7A;
 $grey: #1A1A1A;
 $light-blue: #2BC6DB;
+$extra-light-blue: #2BC6DBC9;
 $light-green: #06EF8E;
 $light-grey: #ced4da;
 $white: #FFFFFF;
+$red: #FF0000;
 
 // Fonts
 $MainFont: Lato;
