--- a/src/resources/sass/_buttons.scss
+++ b/src/resources/sass/_buttons.scss
@@ -27,4 +27,30 @@ button {
   &.link {
     color: $light-blue;
   }
+
+  &.secondary {
+    border-radius: $radius;
+    background-color: $light-blue;
+    font-weight: $bold;
+    color: $white;
+    margin: 1rem 0;
+
+    &:hover {
+      color: $white;
+      background-color: $extra-light-blue;
+    }
+  }
+
+  &.default {
+    border-radius: $radius;
+    background-color: $white;
+    font-weight: $bold;
+    color: $light-blue;
+    border-color: $light-blue;
+    margin: 1rem 0;
+
+    &:hover {
+      color: $light-blue;
+    }
+  }
 }
