--- a/src/resources/sass/_mixins.scss
+++ b/src/resources/sass/_mixins.scss
@@ -5,3 +5,12 @@
   flex-wrap: $wrap;
   justify-content: $justify;
 }
+
+@mixin background ($position: fixed) {
+  position: $position;
+  z-index: 0;
+  opacity: .5;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
